Dark mode fixed
C'è da fare in grazia del buon Gesù il tasto

--- a/web/css/styleIndex.css
+++ b/web/css/styleIndex.css
@@ -331,7 +331,7 @@ body {
   /* background-color: #000000; */
   margin: 0;
   font-family: sans-serif; /* provvisorio */
-  color: white;
+  /* color: white; */
 }
 
 /*----------------HEADER------------------*/
